force-app/main/default/objects/Internacion__c/Internacion__c.object-meta.xml
<CustomObject>
    <label>Internacion</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Internacion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>