force-app/main/default/objects/Internacion__c/fields/Closed_by_VF__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_VF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed by VF</label>
    <type>Checkbox</type>
</CustomField>