force-app/main/default/objects/Internacion__c/fields/D_as_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>D_as_seguimiento__c</fullName>
    <formula>(Fecha_de_Fin_Internaci_n__c - Fecha_de_Inicio_Internaci_n__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días seguimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>