force-app/main/default/objects/Internacion__c/fields/Estado_de_Fin_Internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Fin_Internaci_n__c</fullName>
    <label>Estado de Fin Internación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Internación Domiciliaria/3er nivel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>