force-app/main/default/objects/Internacion__c/fields/Fecha_de_Fin_Internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Fin_Internaci_n__c</fullName>
    <label>Fecha de Fin Internación</label>
    <type>Date</type>
</CustomField>