force-app/main/default/objects/Internacion__c/fields/Fecha_de_Inicio_Internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inicio_Internaci_n__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de Inicio Internación</label>
    <type>Date</type>
</CustomField>