force-app/main/default/objects/Internacion__c/fields/IMC__c.field-meta.xml
<CustomField>
    <fullName>IMC__c</fullName>
    <formula>Peso_kg__c  / (( Talla_cm__c /100)^2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>