force-app/main/default/objects/Internacion__c/fields/Indicaciones_de_alta__c.field-meta.xml
<CustomField>
    <fullName>Indicaciones_de_alta__c</fullName>
    <label>Indicaciones de alta</label>
    <type>TextArea</type>
</CustomField>