force-app/main/default/objects/Internacion__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Módulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>Internaciones</relationshipLabel>
    <relationshipName>Internaciones</relationshipName>
    <type>Lookup</type>
</CustomField>