force-app/main/default/objects/Internacion__c/fields/Nombre_Internacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Internacion__c</fullName>
    <formula>Paciente__r.LastName &amp;&quot;, &quot;&amp; Paciente__r.FirstName &amp; &quot; - &quot; &amp; TEXT(Paciente__r.Sanatorio__c) &amp;&quot; - &quot;&amp; TEXT( MONTH( Fecha_de_Inicio_Internaci_n__c))&amp;&quot;/&quot;&amp; TEXT(YEAR( Fecha_de_Inicio_Internaci_n__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Internacion</label>
    <type>Text</type>
</CustomField>