force-app/main/default/objects/Internacion__c/fields/Objetivo_Cal_rico_kcal_Dia__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_Cal_rico_kcal_Dia__c</fullName>
    <label>Objetivo Calórico (kcal/Dia)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>