force-app/main/default/objects/Internacion__c/fields/Objetivo_Prot_ico_g_d_a__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_Prot_ico_g_d_a__c</fullName>
    <label>Objetivo Protéico (g/día)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>