force-app/main/default/objects/Internacion__c/fields/Otra_patolog_a__c.field-meta.xml
<CustomField>
    <fullName>Otra_patolog_a__c</fullName>
    <label>Otra patología</label>
    <length>100</length>
    <type>Text</type>
</CustomField>