force-app/main/default/objects/Internacion__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <label>Paciente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Sanatorio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internaciones</relationshipLabel>
    <relationshipName>Internaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>