force-app/main/default/objects/Internacion__c/fields/Paciente_Aguarda_Internaci_n_domiciliari__c.field-meta.xml
<CustomField>
    <fullName>Paciente_Aguarda_Internaci_n_domiciliari__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paciente Aguarda Internación domiciliari</label>
    <type>Checkbox</type>
</CustomField>