force-app/main/default/objects/Internacion__c/fields/Peso_kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_kg__c</fullName>
    <label>Peso (kg)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>