force-app/main/default/objects/Internacion__c/fields/Talla_cm__c.field-meta.xml
<CustomField>
    <fullName>Talla_cm__c</fullName>
    <label>Talla (cm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>