force-app/main/default/objects/Internacion__c/fields/Tipo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuidado completo</fullName>
            </value>
            <value>
                <fullName>Cuidado personalizado</fullName>
                <isActive>false</isActive>
                <label>Cuidado personalizado</label>
            </value>
            <value>
                <fullName>Rehabilitación deglutoria</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación deglutoria</label>
            </value>
            <value>
                <fullName>Rehabilitación motora - intermedio</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación motora - intermedio</label>
            </value>
            <value>
                <fullName>Rehabilitación motora básico enteral</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación motora básico enteral</label>
            </value>
            <value>
                <fullName>Rehabilitación motora básico oral</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación motora básico oral</label>
            </value>
            <value>
                <fullName>Rehabilitación motora plus</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación motora plus</label>
            </value>
            <value>
                <fullName>autocuidado</fullName>
                <isActive>false</isActive>
                <label>autocuidado</label>
            </value>
            <value>
                <fullName>cuidado básico</fullName>
                <isActive>false</isActive>
                <label>cuidado básico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>