force-app/main/default/objects/Internacion__c/fields/Ubicaci_n_Cama__c.field-meta.xml
<CustomField>
    <fullName>Ubicaci_n_Cama__c</fullName>
    <label>Ubicación/Cama</label>
    <length>100</length>
    <type>Text</type>
</CustomField>