force-app/main/default/objects/Internacion__c/fields/V_a_de_Alimentaci_n__c.field-meta.xml
<CustomField>
    <fullName>V_a_de_Alimentaci_n__c</fullName>
    <label>Vía de Alimentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enteral (sondas)</fullName>
            </value>
            <value>
                <fullName>Enteral (Gastro/yeyuno)</fullName>
            </value>
            <value>
                <fullName>Enteral + Oral</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Gastronomía/Yeyunostomía</fullName>
                <isActive>false</isActive>
                <label>Gastronomía/Yeyunostomía</label>
            </value>
            <value>
                <fullName>Mixto</fullName>
                <isActive>false</isActive>
                <label>Mixto</label>
            </value>
            <value>
                <fullName>SNE</fullName>
                <isActive>false</isActive>
                <label>SNE</label>
            </value>
            <value>
                <fullName>SON</fullName>
                <isActive>false</isActive>
                <label>SON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>