force-app/main/default/objects/Internacion__c/fields/VGS_inicial__c.field-meta.xml
<CustomField>
    <fullName>VGS_inicial__c</fullName>
    <label>VGS inicial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>B sospecha</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>